--- a/FrameDemo.Api/appsettings.json
+++ b/FrameDemo.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=FrameDemo.db"
   }
