--- a/FrameDemo.Api/appsettings.Development.json
+++ b/FrameDemo.Api/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  },
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=FrameDemo.db"
   }
