--- a/FrameDemo.Infrastructure/FrameDemo.Infrastructure.csproj
+++ b/FrameDemo.Infrastructure/FrameDemo.Infrastructure.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.9.1" />
   </ItemGroup>
 
   <ItemGroup>
