--- a/FrameDemo.Api/Properties/launchSettings.json
+++ b/FrameDemo.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "FrameDemo.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "http://localhost:5000/api/sample",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
