--- a/FrameDemo.Api/appsettings.json
+++ b/FrameDemo.Api/appsettings.json
@@ -4,6 +4,11 @@
       "Default": "Warning"
     }
   },
+  "JWT": {
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000",
+    "ServerSecret": "zhoudafu201807041123"
+  },
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=FrameDemo.db"
   }
