--- a/FrameDemo.Api/appsettings.Development.json
+++ b/FrameDemo.Api/appsettings.Development.json
@@ -6,6 +6,11 @@
       "Microsoft": "Information"
     }
   },
+  "JWT": {
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000",
+    "ServerSecret": "zhoudafu201807041123"
+  },
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=FrameDemo.db"
   }
