--- a/FrameDemo.Infrastructure/FrameDemo.Infrastructure.csproj
+++ b/FrameDemo.Infrastructure/FrameDemo.Infrastructure.csproj
@@ -14,6 +14,12 @@
     <ProjectReference Include="..\FrameDemo.Core\FrameDemo.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\11.0.2\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
 
 
